<resources>
    <string name="app_name">LocalCommunity</string>
    <string name="app_api_server_url">https://api.hakbong.me/</string>

    <string name="login_alert_id">입력하신 이메일의 형식이 올바르지 않습니다.</string>
    <string name="login_alert_pw">입력하신 비밀번호의 형식이 올바르지 않습니다.</string>
    <string name="login_error_authfail">아이디 / 비밀번호가 올바르지 않습니다.</string>
    <string name="login_error_serverfail">서버통신이 원활하지 않습니다.\n네트워크 상태를 확인해주세요.</string>
    <string name="login_error_invalid_format">서버에 전송된 아이디/비밀번호의 형식이 올바르지 않습니다.</string>
    <string name="login_succeed_logintask">로그인에 성공하였습니다!</string>

    <string name="register">회원가입</string>
    <string name="emailEnter">이메일 입력</string>
    <string name="pwdEnter">비밀번호 입력</string>
    <string name="pwdReEnter">비밀번호 재입력</string>
    <string name="nickEnter">닉네임 입력</string>
    <string name="complete">등록</string>
    <string name="home">홈</string>
    <string name="search_title">검색하기</string>
    <string name="no_community">소속된 커뮤니티가 없어요…</string>
    <string name="did_you_forget">계정을 까먹으셨나요?</string>
    <string name="dont_you_have_account">계정이 없으신가요?</string>
    <string name="id">아이디</string>
    <string name="google_login">구글 계정으로 로그인</string>
    <string name="community_create_subtitle1">직접 커뮤니티를 개설해서</string>
    <string name="community_create_subtitle2">주위의 사람들과 얽히고 싶다면</string>
    <string name="community_create_title">커뮤니티 개설하기</string>
    <string name="community_find_subtitle1">근처 사람들과 모여서</string>
    <string name="community_find_subtitle2">정보를 공유하고 이야기하고 싶다면</string>
    <string name="community_find_title">커뮤니티 찾아보기</string>
    <string name="new_article">새 게시물</string>
    <string name="cancel">취소</string>
    <string name="upload">게시</string>
    <string name="enter_content">내용을 입력하세요.</string>
    <string name="enter_title">제목을 입력하세요.</string>
    <string name="search_subcontent">원하는 커뮤니티 찾아 삼만리</string>
    <string name="login">로그인</string>
    <string name="search_content">우리 한 번 커뮤니티 찾아봅시다</string>
    <string name="search_edittext_hint">검색어를 입력해주세요.</string>
    <string name="search_button_content">내용</string>
    <string name="search_button_tag">태그</string>
    <string name="search_button_title">제목</string>
    <string name="search_button_writer">게시자</string>
    <string name="email_chk">이메일 인증 여부</string>
    <string name="phonenum">전화 번호 입력(숫자만)</string>
    <string name="signup_name">별명 입력</string>
    <string name="signup_area">활동지역 선택하기</string>
    <string name="Sign_err_location">활동 지역을 설정해주세요.</string>
    <string name="Sign_err_gender">올바른 성별을 선택해주세요.</string>
    <string name="signup_email">이메일을 입력해주세요 </string>
    <string name="signup_pwd">비밀번호를 입력해주세요</string>
    <string name="signup_phonenum">전화번호를 입력해주세요</string>
    <string name="signup_email_err"> "올바른 이메일 형식이 아닙니다."</string>
    <string name="signup_pwd_err"> "올바른 비밀번호 형식이 아닙니다."</string>
    <string name="signup_phonenum_err"> "올바른 전화번호 형식이 아닙니다."</string>
    <string name="signup_email_correct"> "올바른 이메일 형식입니다."</string>
    <string name="signup_pwd_correct"> "올바른 비밀번호 형식입니다."</string>
    <string name="signup_phonenum_correct"> "올바른 전화번호 형식입니다."</string>

    <string name="profile_username_example">한경민</string>
    <string name="profile_user_description_example">저는 장종우의 충실한 노예 탈모입니다.</string>
    <string name="profile_text_user_information">계정 정보</string>
    <string name="profile_text_change_password">비밀번호 변경</string>
    <string name="profile_text_withdraw">탈퇴</string>
    <string name="profile_text_personal_information">개인정보</string>
    <string name="profile_text_birthday">생년월일</string>
    <string name="profile_user_birthday_example">2003년 6월 2일</string>
    <string name="profile_text_name">이름</string>
    <string name="profile_name_example">윤영창</string>
    <string name="profile_text_gender">성별</string>
    <string name="profile_gender_example">남</string>
    <string name="profile_text_address">주소</string>
    <string name="profile_address_example">전라남도 목포시 남악1로 52번길 83...</string>
    <string name="profile_text_change_personal_information">수정</string>
    <string name="profile_text_service">서비스</string>
    <string name="profile_text_privacy_policy">개인정보 처리방침</string>
    <string name="profile_text_check_update">업데이트 확인</string>
    <string name="profile_text_terms_of_use">이용약관</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="create_community_title">개설하기</string>
    <string name="create_community_describe_1">이 근처 사람들과 함께할 수 있는</string>
    <string name="create_community_describe_2">커뮤니티를 한 번 개설해볼까요?</string>
    <string name="create_community_btn_text">커뮤니티 개설하기</string>
    <string name="create_community_text_community_name">커뮤니티 이름</string>
    <string name="create_community_text_community_location">커뮤니티 위치</string>
    <string name="create_community_text_community_describe">커뮤니티 소개</string>
    <string name="create_community_text_tag">태그</string>
</resources>
