<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.fragment_profile.ProfileFragment">

        <LinearLayout
            android:id="@+id/profile_relativelayout_userimage_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/gagnammin"
                android:elevation="13dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="bottom"
                    android:background="@color/colorMain"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ntsblack"
                    android:includeFontPadding="false"
                    android:text="@string/profile_username_example"
                    android:textColor="@color/black"
                    android:textSize="30sp" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/ntlight"
                android:includeFontPadding="false"
                android:text="@string/profile_user_description_example"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_linearlayout_user_information_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_relativelayout_userimage_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/ntsblack"
                android:text="@string/profile_text_user_information"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/round"
                android:elevation="8dp"
                android:fontFamily="@font/ntsmedium"
                android:gravity="start|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@string/profile_text_change_password"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round"
                android:elevation="12dp"
                android:fontFamily="@font/ntsmedium"
                android:gravity="start|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@string/profile_text_withdraw"
                android:textColor="#FF1E3C" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_constraintlayout_personal_information_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_linearlayout_user_information_layout">

            <TextView
                android:id="@+id/profile_textview_personal_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ntsblack"
                android:text="@string/profile_text_personal_information"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_textview_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ntsbold"
                android:includeFontPadding="false"
                android:text="@string/profile_text_birthday"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_textview_personal_information" />

            <TextView
                android:id="@+id/profile_textview_user_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ntsmedium"
                android:includeFontPadding="false"
                android:text="@string/profile_user_birthday_example"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_textview_birthday" />

            <TextView
                android:id="@+id/profile_textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ntsbold"
                android:includeFontPadding="false"
                android:text="@string/profile_text_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_textview_user_birthday" />

            <TextView
                android:id="@+id/profile_textview_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ntsmedium"
                android:includeFontPadding="false"
                android:text="@string/profile_name_example"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_textview_name" />

            <TextView
                android:id="@+id/profile_textview_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ntsbold"
                android:includeFontPadding="false"
                android:text="@string/profile_text_gender"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_textview_user_name" />

            <TextView
                android:id="@+id/profile_textview_user_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ntsmedium"
                android:includeFontPadding="false"
                android:text="@string/profile_gender_example"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_textview_gender" />

            <TextView
                android:id="@+id/profile_textview_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ntsbold"
                android:includeFontPadding="false"
                android:text="@string/profile_text_address"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_textview_user_gender" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ntsmedium"
                android:includeFontPadding="false"
                android:text="@string/profile_address_example"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_textview_address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ntsblack"
                android:includeFontPadding="false"
                android:text="@string/profile_text_change_personal_information"
                android:textColor="#D4D4D4"
                android:textSize="14sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_textview_personal_information" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_constraintlayout_personal_information_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/ntsblack"
                android:text="@string/profile_text_service"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/round"
                android:elevation="8dp"
                android:fontFamily="@font/ntsmedium"
                android:gravity="left|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@string/profile_text_privacy_policy"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/round"
                android:elevation="12dp"
                android:fontFamily="@font/ntsmedium"
                android:gravity="left|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@string/profile_text_check_update"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round"
                android:elevation="12dp"
                android:fontFamily="@font/ntsmedium"
                android:gravity="start|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@string/profile_text_terms_of_use"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
